--- a/requirements-slim.txt
+++ b/requirements-slim.txt
@@ -55,6 +55,7 @@ fastapi
 uvicorn[standard]
 sentence_transformers
 
+huggingface-hub >= 0.26.0
 huggingface >= 0.0.1
 langchain-huggingface >= 0.1.0
 text-generation 
