--- a/requirements-slim.txt
+++ b/requirements-slim.txt
@@ -71,9 +71,9 @@ accelerate >= 1.0.1
 pdfminer.six
 
 fastai >= 2.7.17
-torch >= 2.4.0
-torchaudio >= 2.4.0
-torchvision >= 0.20.0
+torch == 2.4.0
+torchaudio == 2.4.0
+torchvision == 0.20.0
 
 faiss-cpu >= 1.9.0
 
